--- a/lab-2022/core2-review-page/style.css
+++ b/lab-2022/core2-review-page/style.css
@@ -10,18 +10,22 @@ h3{
 
 ul {
     list-style: none;
+    list-style-type: none;
     margin-left: 0;
     padding-left: 0;
+    padding:0%;
   }
   
   li {
     padding-left: 1em;
     text-indent: -1em;
+    padding:0%;
   }
   
   li:before {
     content: "♡";
     padding-right: 5px;
+    padding:0%;
   }
 
 a:link {
@@ -53,4 +57,5 @@ a:link {
     text-align: left; 
     position: relative;
     left: 480px;
+    padding:0%;
 }
